Fix for ui-build-pkg job

--- a/circle.yml
+++ b/circle.yml
@@ -75,8 +75,8 @@ deployment:
           )) &&
           docker push ${DOCKER_ORGANIZATION:-$DOCKER_USER}/scope &&
           docker push ${DOCKER_ORGANIZATION:-$DOCKER_USER}/scope:$(./tools/image-tag) &&
-          (test -z "${UI_BUCKET_KEY_ID}" || make ui-upload)
-        )
+          (test -z "${UI_BUCKET_KEY_ID}" || make ui-upload) &&
+          (test -z "${UI_BUCKET_KEY_ID}" || make ui-build-pkg)
       - |
         test -z "${QUAY_USER}" || (
           docker login -e '.' -u "$QUAY_USER" -p "$QUAY_PASSWORD" quay.io &&
